--- a/force-app/main/default/layouts/KPMay1__c-More%2E   Than%2E  One%2E Space.layout-meta.xml
+++ b/force-app/main/default/layouts/KPMay1__c-More%2E   Than%2E  One%2E Space.layout-meta.xml
@@ -8,6 +8,9 @@
         <label>Fields</label>
         <layoutColumns>
             <layoutItems>
+                <emptySpace>true</emptySpace>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>OwnerId</field>
             </layoutItems>
@@ -18,6 +21,14 @@
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsLeftToRight</style>
+    </layoutSections>
+    <layoutSections>
+        <customLabel>true</customLabel>
+        <detailHeading>true</detailHeading>
+        <editHeading>true</editHeading>
+        <label>New Section</label>
+        <layoutColumns/>
+        <style>OneColumn</style>
     </layoutSections>
     <layoutSections>
         <customLabel>true</customLabel>
