US-0000019 Check conflict - step 3 with CO+Layout

--- a/force-app/main/default/layouts/KPMay1__c-More%2E   Than%2E  One%2E Space.layout-meta.xml
+++ b/force-app/main/default/layouts/KPMay1__c-More%2E   Than%2E  One%2E Space.layout-meta.xml
@@ -35,7 +35,11 @@
         <detailHeading>true</detailHeading>
         <editHeading>false</editHeading>
         <label>Custom Links</label>
-        <layoutColumns/>
+        <layoutColumns>
+            <layoutItems>
+                <emptySpace>true</emptySpace>
+            </layoutItems>
+        </layoutColumns>
         <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
