Update KPMay1__c-More%2E   Than%2E  One%2E Space.layout-meta.xml

--- a/force-app/main/default/layouts/KPMay1__c-More%2E   Than%2E  One%2E Space.layout-meta.xml
+++ b/force-app/main/default/layouts/KPMay1__c-More%2E   Than%2E  One%2E Space.layout-meta.xml
@@ -33,7 +33,7 @@
     <layoutSections>
         <customLabel>true</customLabel>
         <detailHeading>true</detailHeading>
-        <editHeading>true</editHeading>
+        <editHeading>False-Dummy2</editHeading>
         <label>Custom Links</label>
         <layoutColumns>
             <layoutItems>
